--- a/filebeat/docs/configuration.asciidoc
+++ b/filebeat/docs/configuration.asciidoc
@@ -152,11 +152,13 @@ how long the harvester waits for the system to complete a line before skipping t
 
 ===== force_close_files
 
-By default, Filebeat keeps the files that it’s reading open until the timespan specified by `ignore_older` has elapsed. This behaviour can cause issues when a file is removed. Because the file isn't fully removed until Filebeat closes the file, no new file with the same name can be created during this time.
+By default, Filebeat keeps the files that it’s reading open until the timespan specified by `ignore_older` has elapsed.
+This behaviour can cause issues when a file is removed. On Windows, the file cannot be fully removed until Filebeat closes
+the file. In addition no new file with the same name can be created during this time.
 
-You can force Filebeat to close the file as soon as the file name changes by setting the `force_close_windows_files` option to true. This option is supported on Windows only. The default is false.
-
-Turning on this option can lead to loss of data on rotated files. After file rotation, the beginning of the new file might be skipped because the reading starts at the end of the file. We recommend that you leave this option set to false, and instead specify a lower value for the `ignore_older` option to release files faster.
+You can force Filebeat to close the file as soon as the file name changes by setting the
+`force_close_files` option to true. The default is false. Turning on this option can lead to loss of data on
+rotated files in case not all lines were read from the rotated file.
 
 ===== spool_size
 
