Closed changelog for 1.0.1
* Added shortcuts for links to Github

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -1,5 +1,11 @@
 
+// Use these for links to issue and pulls. Note issues and pulls redirect one to
+// each other on Github, so don't worry too much on using the right prefix.
+:issue: https://github.com/elastic/beats/issues/
+:pull: https://github.com/elastic/beats/pull/
+
 ////////////////////////////////////////////////////////////
+// Template, add newest changes here
 
 === Beats version HEAD
 https://github.com/elastic/beats/compare/1.0.0...master[Check the HEAD diff]
@@ -56,6 +62,27 @@ https://github.com/elastic/beats/compare/1.0.0...master[Check the HEAD diff]
 *Winlogbeat*
 
 ////////////////////////////////////////////////////////////
+
+
+
+[[release-notes-1.0.1]]
+=== Beats version 1.0.1
+https://github.com/elastic/beats/compare/1.0.0...1.0.1[Check 1.0.0 diff]
+
+==== Bugfixes
+
+*Filebeat*
+
+- Fix force_close_files in case renamed file appeared very fast. https://github.com/elastic/filebeat/pull/302[302]
+
+*Packetbeat*
+
+- Improve MongoDB message correlation. {issue}377[377]
+- Improve redis parser performance. {issue}442[422]
+- Fix panic on nil in redis protocol parser. {issue}384[384]
+- Fix errors redis parser when messages are split in multiple TCP segments. {issue}402[402]
+- Fix errors in redis parser when length prefixed strings contain sequences of CRLF. {issue}#402[402]
+- Fix errors in redis parser when dealing with nested arrays. {issue}#402[402]
 
 [[release-notes-1.0.0]]
 === Beats version 1.0.0
