--- a/topbeat/docs/configuration.asciidoc
+++ b/topbeat/docs/configuration.asciidoc
@@ -5,18 +5,13 @@ Before modifying configuration settings, make sure you've read
 <<topbeat-configuration>>.
 
 The Topbeat configuration file uses http://yaml.org/[YAML] for its syntax.
-The file contains config options common to all Beats. These options are described
-in the following sections of the {libbeat}/configuration.html[Beats Platform Reference]:
-
-* {libbeat}/configuration.html#configuration-shipper[Shipper]
-* {libbeat}/configuration.html#configuration-output[Output]
-* {libbeat}/configuration.html#configuration-logging[Logging (Optional)]
-* {libbeat}/configuration.html#configuration-run-options[Run Options (Optional)]
-
-The Topbeat config options are described here:
+The configuration options are described in the following sections:
 
 * <<configuration-input>>
-
+* <<configuration-output>>
+* <<configuration-shipper>>
+* <<configuration-logging>>
+* <<configuration-run-options>>
 
 [[configuration-input]]
 === Input
@@ -65,4 +60,12 @@ parent pid, state, pid, CPU usage, and memory usage.
 * `filesystem: true` to capture file system statistics, including details about the
 mounted disks, such as the total and used disk space, and details about each
 disk, such as the device name and the mounting place.
+
+include::../../libbeat/docs/outputconfig.asciidoc[]
+
+include::../../libbeat/docs/shipperconfig.asciidoc[]
+
+include::../../libbeat/docs/loggingconfig.asciidoc[]
+
+include::../../libbeat/docs/runconfig.asciidoc[]
 
