--- a/packetbeat/docs/index.asciidoc
+++ b/packetbeat/docs/index.asciidoc
@@ -1,6 +1,8 @@
 = Packetbeat Reference
 :libbeat: http://www.elastic.co/guide/en/beats/libbeat/1.0.1
 :version: 1.0.1
+:beatname_lc: packetbeat
+:beatname_uc: Packetbeat
 
 include::./overview.asciidoc[]
 
