--- a/packetbeat/docs/filtering.asciidoc
+++ b/packetbeat/docs/filtering.asciidoc
@@ -2,6 +2,7 @@
 
 In Kibana, you can filter transactions either by entering a search query or by clicking on elements within a visualization. 
 
+[float]
 === Creating Queries
 
 The search field on the *Discover* page provides a way to query 
@@ -14,6 +15,7 @@ you want to find the HTTP redirects, you can search for
 
 image:./images/kibana-query-filtering.png[Kibana query]
 
+[float]
 ==== String Queries
 
 A query may consist of one or more words or a phrase. A phrase is a
@@ -43,6 +45,7 @@ To search for all transactions with the "chunked" encoding:
 "Transfer-Encoding: chunked"
 -----------------------------
 
+[float]
 ==== Field-Based Queries
 
 Kibana allows you to search specific fields.
@@ -69,6 +72,7 @@ To view MySQL INSERT queries only:
 mysql.method: INSERT
 ---------------------
 
+[float]
 ==== Regexp Queries
 
 Kibana supports regular expression for filters and expressions. For example,
@@ -83,7 +87,7 @@ See
 http://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl-regexp-query.html[Elasticsearch regexp query]
 for more details about the syntax.
 
-
+[float]
 ==== Range Queries
 
 Range queries allow a field to have values between the lower and upper bounds.
@@ -104,6 +108,7 @@ To search for slow transactions with a response time greater than 10ms:
 responsetime: {10 TO *}
 -------------------------
 
+[float]
 ==== Boolean Queries
 
 Boolean operators (AND, OR, NOT) allow combining multiple sub-queries through logic operators.
@@ -135,6 +140,7 @@ To search for either INSERT or UPDATE MySQL queries with a response time greater
 (mysql.method: INSERT OR mysql.method: UPDATE) AND responsetime: [30 TO *]
 ---------------------------------------------------------------------------
 
+[float]
 === Creating Filters
 
 In Kibana, you can also filter transactions by clicking on
