--- a/packetbeat/docs/gettingstarted.asciidoc
+++ b/packetbeat/docs/gettingstarted.asciidoc
@@ -6,9 +6,9 @@ Packetbeat is to try it on your own traffic.
 
 To get started with your own Packetbeat setup, install and configure these related products:
 
- * Elasticsearch for storage and indexing the data. {libbeat}/getting-started.html#elasticsearch-installation[More details]
- * Kibana for the UI. {libbeat}/getting-started.html#kibana-installation[More details]
- * Optionally Logstash for inserting data into Elasticsearch. {libbeat}/getting-started.html#logstash-installation[More details]
+ * Elasticsearch for storage and indexing the data. {libbeat}/elasticsearch-installation.html[More details]
+ * Kibana for the UI. {libbeat}/kibana-installation.html[More details]
+ * Optionally Logstash for inserting data into Elasticsearch. {libbeat}/logstash-installation.html[More details]
 
 After you have installed these products, you can start <<packetbeat-installation>>.
 
@@ -293,7 +293,7 @@ dashboards are maintained in this
 https://github.com/elastic/beats-dashboards[GitHub repository], which also
 includes instructions for loading the dashboards.
 
-You can load all of the sample dashboards automatically by following {libbeat}/getting-started.html#load-kibana-dashboards[these steps].
+You can load all of the sample dashboards automatically by following {libbeat}/kibana-installation.html#load-kibana-dashboards[these steps].
 
 
 image:./images/packetbeat-statistics.png[Packetbeat statistics]
