--- a/topbeat/docs/fields.asciidoc
+++ b/topbeat/docs/fields.asciidoc
@@ -67,7 +67,7 @@ The hostname as returned by the operating system on which the Beat is running.
 Contains system-wide statistics. These statistics are the details that you can get by running the *top* command on Unix systems.
 
 
-
+[float]
 === load Fields
 
 The system load average. The load average is the average number  of jobs in the run queue.
@@ -94,7 +94,7 @@ type: float
 
 The load average over 15 minutes. 
 
-
+[float]
 === cpu Fields
 
 This group contains statistics related to CPU usage.
@@ -168,7 +168,7 @@ type: int
 
 The amount of CPU time spent in involuntary wait by the virtual CPU while the hypervisor was servicing another processor. Available only on Unix.
 
-
+[float]
 === mem Fields
 
 This group contains statistics related to the memory usage on the system.
@@ -222,7 +222,7 @@ type: float
 
 The percentage of actual used memory.
 
-
+[float]
 === swap Fields
 
 This group contains statistics related to the swap memory usage on the system.
@@ -283,7 +283,7 @@ The percentage of actual used swap memory.
 Per-process statistics that you can get by running the *top* or *ps* command on Unix systems.
 
 
-
+[float]
 === proc Fields
 
 Contains per-process statistics like memory usage, CPU usage, and details about each process, such as state, name, pid, and ppid.
@@ -317,7 +317,7 @@ type: int
 
 The process parent pid.
 
-
+[float]
 === cpu Fields
 
 CPU-specific statistics per process.
@@ -357,7 +357,7 @@ type: string
 
 The time when the process was started. Example: "17:45".
 
-
+[float]
 === mem Fields
 
 Memory-specific statistics per process.
@@ -397,7 +397,7 @@ The shared memory the process uses.
 File system-related statistics that you can get by using the *df* command on Unix systems.
 
 
-
+[float]
 === fs Fields
 
 Contains details about the mounted disks, such as the total or used disk space, and details about each disk, such as  the device name and the mounting place.
