--- a/packetbeat/docs/command-line.asciidoc
+++ b/packetbeat/docs/command-line.asciidoc
@@ -35,6 +35,7 @@ Usage of ./packetbeat:
       Additional seconds to wait before shutting down
 ----------------------------------------------------------------------------
 
+[float]
 === Packet-Beat Specific Options
 These command line options are specific to Packetbeat:
 
@@ -61,6 +62,7 @@ Read the packets from the pcap file as fast as possible without sleeping. Use th
 *`-waitstop <n>`*::
 Wait an additional `n` seconds before exiting.
 
+[float]
 === Other Options
 
 These command line options from libbeat are also available for Packetbeat:
