--- a/topbeat/docs/gettingstarted.asciidoc
+++ b/topbeat/docs/gettingstarted.asciidoc
@@ -6,9 +6,9 @@ statistics along with a disk usage overview.
 
 To get started with your own Topbeat setup, install and configure these related products:
 
- * Elasticsearch for storage and indexing the data. {libbeat}/getting-started.html#elasticsearch-installation[More details]
- * Kibana for the UI. {libbeat}/getting-started.html#kibana-installation[More details]
- * Optionally Logstash for inserting data into Elasticsearch. {libbeat}/getting-started.html#logstash-installation[More details]
+ * Elasticsearch for storage and indexing the data. {libbeat}/elasticsearch-installation.html[More details]
+ * Kibana for the UI. {libbeat}/kibana-installation.html[More details]
+ * Optionally Logstash for inserting data into Elasticsearch. {libbeat}/logstash-installation.html[More details]
 
 After you have installed these products, you can start <<topbeat-installation>>.
 
@@ -212,7 +212,7 @@ https://github.com/elastic/beats-dashboards[GitHub repository], which also
 includes instructions for loading the dashboards.
 
 You can load all of the sample dashboards automatically by following
-{libbeat}/getting-started.html#load-kibana-dashboards[these steps].
+{libbeat}/kibana-installation.html#load-kibana-dashboards[these steps].
 
 image:./images/topbeat-dashboard.png[Topbeat statistics]
 
